--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.1.0",
+    "@jcteh8885/baileys": "^1.0.6",
     "qrcode-terminal": "^0.12.0"
   }
 }
