--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soihib",
+  "name": "whatsapp-story",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@jcteh8885/baileys": "^1.0.6",
+    "baileys": "^6.7.5",
     "qrcode-terminal": "^0.12.0"
   }
 }
